<resources>
    <string name="app_name">TesToonjo</string>
    <string name="login">Login</string>
    <string name="tonjoo_test">Tonjoo Test!</string>
    <string name="todo">TODO</string>
    <string name="password_kamu">Password Kamu</string>
    <string name="username_kamu">Username Kamu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="error_toast">Ada yang salah itu ...</string>
    <string name="success_toast">Success</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string-array name="spinnerItems">
        <item>MALE</item>
        <item>FEMALE</item>

    </string-array>
</resources>