<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/ivGambar"
            android:src="@drawable/example"
            android:layout_margin="14dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="120dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="3dp"
                android:id="@+id/tvFirst"
                android:text="@string/first_name"

                android:textSize="14sp"
                android:textColor="#2C2C30"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="3dp"
                android:text="@string/last_name"
                android:textColor="#2C2C30"
                android:textSize="14sp" />
        </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="5dp"
                android:id="@+id/tvGender"
                android:paddingStart="3dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="3dp"
                android:textColor="#2C2C30"
                android:textSize="14sp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:id="@+id/tvEmail"
                android:paddingStart="3dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:paddingEnd="3dp"
                android:textColor="#2C2C30"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>